# das-conformer

./: .gitignore  README.md  env_macos.yaml  env_other.yaml  pyproject.toml  setup.py
envs/: env_macos.yaml  env_macos_pip.yaml  env_other.yaml  env_other_pip.yaml
src/das_conformer/: __init__.py  app.py  data.py  data_bak.py  data_npy.py  formbuilder.py  main.py  model.py  train.py
src/das_conformer/annotation/: annot.py  predict.py
src/das_conformer/data/: __init__.py  audio_dir.py  audio_file.py  npy_dir.py  raw_audio_dir.py  raw_audio_file.py  raw_npy_dir.py
src/das_conformer/models/: __init__.py  conformer.py  raw_conformer.py  raw_tcn.py
